Fix popup/context menu offscreen on mobile browser with bottom menu

--- a/src/components/popup/contextmenu.module.css
+++ b/src/components/popup/contextmenu.module.css
@@ -1,6 +1,6 @@
 .contextMenuHolder {
-	width: 100vw;
-	height: 100vh;
+	width: 100svw;
+	height: 100svh;
 	z-index: 1000000;
 	position: absolute;
 	pointer-events: none;
